changelog.txt - What has been done to WinDirStat (newest top)
Last modified: $Date$
=============================================================

2004-11-14	bseifert
	* Date/time and number formatting is now done using
	  GetUserDefaultLangID(), unless the new option
	  "Use this language for formatting" (near the language
	  combo box) is selected.
	  So British users, for example, see their preferred
	  date/time format as configured in the control panel
	  although the selected language for Windirstat is
	  "English - US".
	   
2004-11-12  bseifert
	* Added Polish resource dll: wdsr0415. Thanks to Darek.
	* New output folders for Unicode build: udebug, urelease
	* Eliminated CLR_NONE
	* Minor formatting and error handling corrections
	
2004-11-12	assarbad
	* Coloring for compressed and encrypted items spans the
	  full row (for list control in another state than "Full
	  row select" the style needs to be decided, yet).
	* Renamed "Table Of Contents.hhc" to toc.hhc, as Linux
	  CVS cannot handle filenames with blanks in them.
	* Implemented ExplorerStyle option which will not be
	  accessible through the options dialog.
	  It handles where the context menu is being shown.

2004-11-07	assarbad/bseifert
        * French part for setup.rc
        * Minor bugfix concerning "follow junction points"
        * Using compressed file size as reference now. This includes
          compressed and sparse files. A wrapper makes this transparent
          for the caller.
        * Compressed files/folders are now shown by default in blue,
          encrypted files/folders are shown by default in green.
          These settings can be altered by modifying the two
          REG_BINARY values "AltColor" (for compressed) and
          "AltEncryptionColor" (for encrypted) under the key:
          
          HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Explorer

          This mimics the behavior of the Windows XP explorer.

2004-11-06	assarbad